# mafsrv

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
dep/: CMakeLists.txt
dep/jwtpp/: CMakeLists.txt
dep/pistache/: CMakeLists.txt
dep/sqlpp11/: CMakeLists.txt
inc/: pgdb.h  restserver.h  sqlpp11_tables.h  users.h
src/: CMakeLists.txt  mafsrv  main.cpp  pgdb.cpp  pgdb.h  restserver.cpp  restserver.h
subprojects/: jwtpp.wrap  pistache.wrap  sqlpp11.wrap
